--- a/resources/keys.cfg
+++ b/resources/keys.cfg
@@ -1,9 +1,13 @@
-Fullscreen_toggle 24:5
 Window_close 0:0
-Intro_Continue 24:1
+Fullscreen_toggle 5:89
+Intro_Continue 5:57
 Mouse_Left 9:0
-Key_Pause 24:2
+Key_Escape 5:36
 Key_P 5:15
+Key_T 5:19
+Key_K 5:10
+Key_O 5:14
+Key_X 5:23
 Player_MoveLeft 24:0
 Player_MoveRight 24:3
 Player_Jump 5:57
